[package]
name = "wasm-cache"
version = "0.1.1"
edition = "2021"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
license = "MIT"
description = "Request cache for Rust browser WASM applications"
repository = "https://github.com/xfbs/wasm-cache"

[dependencies]
async-trait = { version = "0.1.72" }
log = { version = "0.4.19", optional = true }
prokio = { version = "0.1.0", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
yew = { version = "0.20.0", optional = true }

[features]
yew = ["dep:yew", "dep:prokio", "dep:wasm-bindgen-futures"]
log = ["dep:log"]
